# exchange-rate-web-app

./: .coveragerc  .env.testing  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
src/: app.py  config.py  main.py
src/lib/: cache_storage.py  coders.py  currency_check_exists.py  currency_rates_getter.py  types.py  validators.py
tests/: currencies_raw_data.py  data.py  helpers.py
tests/integration/: exchange_rate_service.py  test_currency_rates.py
tests/unit/: test_currency_exists.py  test_currency_info.py  test_file_storage.py  test_rates_getter.py  test_redis_storage.py  test_validators.py
